updated dp path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <center> -->
     <table cellspacing="20">
         <th>
-        <td><img src="images/harsha.png">
+        <td><img src="harsha.png">
         </td>
         <td>
             <h1>Harsha Naga K</h1>
